# hackathon19_deskovery

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  Deskovery_JetHackaton2019.key  README.md  STM32L476RGTx_FLASH.ld  l4-deskovery.ioc  l4-deskovery.txt
Core/: rust_header.h
Core/Inc/: 5x5_font.h  8x6_font.h  LCD.h  main.h  rust_header.h  screen.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  tim.h  vl53l1_platform.h  vl53l1_platform_user_data.h
Core/Src/: LCD.c  adc.c  descovery.c  deskovery.c  ferris.c  gpio.c  i2c.c  logos.c  main.c  serialuart.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  tim.c  usart.c  vl53l1_platform.c
Drivers/ILI9341/: ILI9341_GFX.c  ILI9341_GFX.h  ILI9341_STM32_Driver.c  ILI9341_STM32_Driver.h
data/: Cargo.toml
data/src/: lib.rs
deskoveryweb/: pom.xml
deskoveryweb/src/main/java/com/intellij/labs/elmot/deskovery/: ControlData.java  DataLine.java  DeskoveryServer.java
deskoveryweb/src/main/resources/: index.html
odometry/: Cargo.toml
odometry/src/: lib.rs
rpi-setup/: deskovery.cfg
rust_deskovery/: Cargo.toml  build._rs  build.rs
rust_deskovery/src/: compat.rs  data.rs  descovery_bindings.rs  generated_images.rs  lib.rs  odometry.rs  wifi.rs
rust_wifi/: Cargo.toml
rust_wifi/examples/: example.rs
rust_wifi/src/: lib.rs  main.rs
server/: Cargo.toml  test.pbm
server-proto/: data.json  index.html
server/src/: index.html  main.rs
