[package]
name = "rust_deskovery"
version = "0.1.0"
authors = ["Kirill Bulatov <mail4score@gmail.com>"]
edition = "2018"

build = "build.rs"

[lib]
name = "rust_deskovery"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
bindgen = "0.51"
image = "0.22"

[dependencies]
odometry = { path = "../odometry" }
wifi = { path = "../rust_wifi" }
data = { path = "../data" }