[package]
name = "rust_deskovery"
version = "0.1.0"
authors = ["Kirill Bulatov <mail4score@gmail.com>", "Arseniy Pendryak <arseniy.pendryak@jetbrains.com>", "vlad20012 <beskvlad@gmail.com>", "Artem Mukhin <Artem.Mukhin@jetbrains.com>"]
edition = "2018"

build = "build.rs"

[lib]
name = "rust_deskovery"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
bindgen = "0.51"
image = "0.22"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.0.1"
